--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -10,12 +10,13 @@
 .clients {
   display: flex;
   flex-wrap: wrap;
-  // gap: 15px;
+  gap: 15px;
 }
 
 .clients__item {
   width: 210px;
   height: 92x;
+
   @media screen and (min-width: 768px) {
     width: 226px;
     height: 92px;
