--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -17,26 +17,6 @@
   text-align: center;
 }
 
-// .img {
-//   // width: 100%;
-//   display: block;
-//   height: auto;
-
-// @media screen and (min-width: 768px) {
-//   margin-right: 15px;
-//   &:last-child {
-//     margin-right: 0;
-//   }
-// }
-
-// @media screen and (min-width: 1200px) {
-//   margin-right: 15px;
-//   &:last-child {
-//     margin-right: 0;
-//   }
-// }
-// }
-
 .team__item {
   width: 100%;
   background-color: #ffffff;
@@ -44,7 +24,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-
+  margin-bottom: 30px;
   gap: 30px;
 
   @media screen and (min-width: 768px) {
