--- a/css/main.css
+++ b/css/main.css
@@ -585,7 +585,6 @@ img {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    max-width: 1199px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero1x-tab.jpg);
   }
 }
@@ -1014,7 +1013,7 @@ img {
 .portfolio__button {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 35px;
+  padding-bottom: 40px;
 }
 @media screen and (min-width: 1200px) {
   .portfolio__button {
@@ -1027,13 +1026,14 @@ img {
 .list-portfolio {
   display: block;
   justify-content: center;
-  margin-bottom: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
 }
 .list-portfolio:hover, .list-portfolio:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  margin-bottom: 30px;
+  gap: 30px;
 }
 @media screen and (min-width: 768px) {
   .list-portfolio {
