--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -26,7 +26,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 1199px;
+    // max-width: 1199px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
