--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio__button {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 35px;
+  padding-bottom: 40px;
 
   @media screen and (min-width: 1200px) {
     display: flex;
@@ -12,7 +12,6 @@
 .list-portfolio {
   display: block;
   justify-content: center;
-  margin-bottom: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
@@ -20,6 +19,8 @@
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
+    margin-bottom: 30px;
+    gap: 30px;
   }
 
   @media screen and (min-width: 768px) {
