--- a/css/main.css
+++ b/css/main.css
@@ -1014,17 +1014,18 @@ img {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 40px;
+  margin-bottom: -15px;
 }
 @media screen and (min-width: 1200px) {
   .portfolio__button {
     display: flex;
     justify-content: center;
     padding-bottom: 56px;
+    margin-bottom: 0;
   }
 }
 
 .list-portfolio {
-  display: block;
   justify-content: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1032,7 +1033,6 @@ img {
 }
 .list-portfolio:hover, .list-portfolio:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  margin-bottom: 30px;
   gap: 30px;
 }
 @media screen and (min-width: 768px) {
