--- a/css/main.css
+++ b/css/main.css
@@ -1026,6 +1026,7 @@ img {
 }
 
 .list-portfolio {
+  display: block;
   justify-content: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
