--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -21,13 +21,16 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     gap: 30px;
+    margin-bottom: 30px;
   }
 
   @media screen and (min-width: 768px) {
     width: calc((100% - 30px) / 2);
+    margin-bottom: 0;
   }
   @media screen and (min-width: 1200px) {
     width: calc((100% - 60px) / 3);
+    margin-bottom: 0;
   }
 }
 
