--- a/css/main.css
+++ b/css/main.css
@@ -92,22 +92,9 @@ img {
 }
 
 .flex-container {
-  display: block;
-  margin-bottom: -30px;
-}
-@media screen and (min-width: 768px) {
-  .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .backdrop {
@@ -1026,7 +1013,6 @@ img {
 }
 
 .list-portfolio {
-  display: block;
   justify-content: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1034,16 +1020,18 @@ img {
 }
 .list-portfolio:hover, .list-portfolio:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  gap: 30px;
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .list-portfolio {
     width: calc((100% - 30px) / 2);
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .list-portfolio {
     width: calc((100% - 60px) / 3);
+    margin-bottom: 0;
   }
 }
 
