--- a/css/main.css
+++ b/css/main.css
@@ -433,7 +433,7 @@ img {
   background-color: #ffffff;
   width: 100vw;
   height: 100vw;
-  z-index: 1;
+  z-index: 1.2;
   padding-top: 48px;
   padding-bottom: 48px;
   padding-left: 40px;
@@ -647,11 +647,17 @@ img {
 .team__title {
   display: block;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  text-align: center;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 
 .team__list {
@@ -783,6 +789,7 @@ img {
   color: #757575;
   display: block;
   text-align: right;
+  align-items: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
@@ -937,12 +944,18 @@ img {
 
 .clients-title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
   color: black;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients-title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 
 .clients {
@@ -953,7 +966,7 @@ img {
 
 .clients__item {
   width: 210px;
-  height: 92x;
+  height: 92px;
 }
 @media screen and (min-width: 768px) {
   .clients__item {
