--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -32,7 +32,7 @@
   color: #757575;
   display: block;
   text-align: right;
-
+  align-items: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
