--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,11 +4,16 @@
 .team__title {
   display: block;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  text-align: center;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 .team__list {
   display: flex;
