--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -107,10 +107,13 @@
 
 .check-text {
   color: #757575;
-  font-size: 14px;
+  font-size: 12px;
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
 }
 
 .check-text::before {
