--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -3,11 +3,14 @@
   flex-wrap: wrap;
   padding-bottom: 40px;
   margin-bottom: -15px;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
 
   @media screen and (min-width: 1200px) {
     display: flex;
     justify-content: center;
-    padding-bottom: 56px;
+    padding-bottom: 50px;
     margin-bottom: 0;
   }
 }
@@ -83,6 +86,9 @@
   &:focus {
     color: var(--accent-color);
   }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
+  }
 }
 
 .post-title {
@@ -119,4 +125,8 @@
 }
 
 .container-elements {
+  display: block;
+  border: 1px solid #ececec;
+  border-top: none;
+  padding: 20px 24px 20px 24px;
 }
