--- a/css/main.css
+++ b/css/main.css
@@ -1165,7 +1165,6 @@ img {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
 }
 @media screen and (min-width: 1200px) {
@@ -1231,7 +1230,7 @@ img {
 }
 
 .footer__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .contacts-link-footer {
@@ -1247,9 +1246,13 @@ img {
 
 .footer-slogan {
   display: block;
+  padding-bottom: 60px;
+  padding-top: 60px;
 }
 @media screen and (min-width: 768px) {
   .footer-slogan {
+    padding-top: 0;
+    padding-bottom: 0;
     margin-left: 165px;
   }
 }
@@ -1262,11 +1265,11 @@ img {
 .footer-send {
   display: block;
 }
+
 .footer-soc-item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
-  margin-top: 20px;
 }
 .footer-soc-item:last-child {
   margin-right: 0;
@@ -1275,6 +1278,7 @@ img {
 .footer-soc-list {
   display: flex;
   justify-content: center;
+  padding-top: 20px;
 }
 @media screen and (min-width: 1200px) {
   .footer-soc-list {
@@ -1332,7 +1336,7 @@ img {
 }
 
 .footer-modal-input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -1343,6 +1347,11 @@ img {
   padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+@media screen and (min-width: 768px) {
+  .footer-modal-input {
+    width: 358px;
+  }
 }
 
 .footer-modal-button {
@@ -1366,20 +1375,25 @@ img {
   padding-bottom: 10px;
   padding-left: 22px;
   padding-right: 62px;
-  margin-top: 20px;
 }
 .footer-modal-button:hover, .footer-modal-button:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-@media screen and (min-width: 1200px) {
-  .footer-modal-button {
-    margin-top: 0;
-  }
 }
 
 .icon-send {
   display: block;
   align-items: center;
+  padding-top: 20px;
+}
+@media screen and (min-width: 768px) {
+  .icon-send {
+    padding: top 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .icon-send {
+    padding: top 0;
+  }
 }
 
 .name-modal-icon {
@@ -1392,6 +1406,12 @@ img {
   .footer__tablet {
     display: flex;
     flex-direction: row;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__tablet {
+    padding-bottom: 0;
   }
 }
 
