--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   justify-content: space-between;
   @media screen and (min-width: 1200px) {
     flex-direction: row;
@@ -16,7 +16,6 @@
 .footer__contacts {
   display: block;
   align-items: center;
-  // padding-bottom: 60px;
 }
 .footer__adress {
   display: block;
@@ -34,7 +33,6 @@
 .footer__logo {
   display: block;
   text-align: center;
-  // padding-top: 60px;
   margin-bottom: 20px;
   color: var(--primary-white-color);
   @media screen and (min-width: 1200px) {
@@ -70,7 +68,7 @@
   }
 }
 .footer__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 
 .contacts-link-footer {
@@ -86,29 +84,26 @@
 
 .footer-slogan {
   display: block;
-  // margin-bottom: 60px;
+  padding-bottom: 60px;
+  padding-top: 60px;
   @media screen and (min-width: 768px) {
-    // margin-top: 65px;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-left: 165px;
   }
   @media screen and (min-width: 1200px) {
-    // margin-top: 72px;
     margin-left: 70px;
   }
 }
 .footer-send {
   display: block;
-  // margin-bottom: 60px;
-  @media screen and (min-width: 1200px) {
-    // margin-top: 72px;
-  }
 }
 
 .footer-soc-item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
-  margin-top: 20px;
+
   &:last-child {
     margin-right: 0;
   }
@@ -117,6 +112,7 @@
 .footer-soc-list {
   display: flex;
   justify-content: center;
+  padding-top: 20px;
   @media screen and (min-width: 1200px) {
     padding-right: 93px;
   }
@@ -165,7 +161,7 @@
 }
 
 .footer-modal-input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -176,6 +172,9 @@
   padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  @media screen and (min-width: 768px) {
+    width: 358px;
+  }
 }
 
 .footer-modal-button {
@@ -199,19 +198,22 @@
   padding-bottom: 10px;
   padding-left: 22px;
   padding-right: 62px;
-  margin-top: 20px;
+
   &:hover,
   &:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   }
-  @media screen and (min-width: 1200px) {
-    margin-top: 0;
-  }
 }
-
 .icon-send {
   display: block;
   align-items: center;
+  padding-top: 20px;
+  @media screen and (min-width: 768px) {
+    padding: top 0;
+  }
+  @media screen and (min-width: 768px) {
+    padding: top 0;
+  }
 }
 .name-modal-icon {
   fill: var(--primary-white-color);
@@ -220,9 +222,12 @@
 }
 
 .footer__tablet {
-  padding-bottom: 60px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: row;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
   }
 }
