--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -89,10 +89,8 @@
   @media screen and (min-width: 768px) {
     padding-top: 0;
     padding-bottom: 0;
-    margin-left: 165px;
   }
   @media screen and (min-width: 1200px) {
-    margin-left: 70px;
   }
 }
 .footer-send {
@@ -155,6 +153,9 @@
   flex-direction: column;
   align-items: center;
   padding-top: 20px;
+
+  @media screen and (min-width: 768px) {
+  }
   @media screen and (min-width: 1200px) {
     flex-direction: row;
   }
@@ -165,7 +166,6 @@
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  margin-right: 12px;
   background-color: #2f303a;
   align-items: center;
   letter-spacing: 0.03em;
@@ -209,10 +209,10 @@
   align-items: center;
   padding-top: 20px;
   @media screen and (min-width: 768px) {
-    padding: top 0;
+    padding-top: 30px;
   }
-  @media screen and (min-width: 768px) {
-    padding: top 0;
+  @media screen and (min-width: 1200px) {
+    padding-top: 0;
   }
 }
 .name-modal-icon {
@@ -225,9 +225,12 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    justify-content: space-around;
     padding-bottom: 60px;
   }
   @media screen and (min-width: 1200px) {
     padding-bottom: 0;
+    justify-content: center;
   }
 }
