--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -174,6 +174,7 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   @media screen and (min-width: 768px) {
     width: 358px;
+    // padding-right: 16px;
   }
 }
 
@@ -198,6 +199,7 @@
   padding-bottom: 10px;
   padding-left: 22px;
   padding-right: 62px;
+  margin-right: 16px;
 
   &:hover,
   &:focus {
@@ -213,6 +215,7 @@
   }
   @media screen and (min-width: 1200px) {
     padding-top: 0;
+    padding-right: 16px;
   }
 }
 .name-modal-icon {
@@ -231,6 +234,5 @@
   }
   @media screen and (min-width: 1200px) {
     padding-bottom: 0;
-    justify-content: center;
   }
 }
