--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -30,8 +30,8 @@
   left: 0;
   background-color: #ffffff;
   width: 100vw;
-  height: 100vw;
-  z-index: 1.2;
+  // height: 100vw;
+  z-index: 2;
   padding-top: 48px;
   padding-bottom: 48px;
   padding-left: 40px;
