--- a/sass/layout/_skils.scss
+++ b/sass/layout/_skils.scss
@@ -57,7 +57,10 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
 }
 .skils__text {
   font-size: 14px;
