--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .container-header {
   display: flex;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 26px;
+  padding-bottom: 26px;
 }
 .header {
   font-size: 16px;
@@ -107,8 +107,8 @@
 .menu-close-btn {
   display: block;
   margin-left: auto;
-  margin-bottom: 30px;
-  margin-top: 20px;
+  // margin-bottom: 30px;
+  // margin-top: 20px;
   border-color: transparent;
   background-color: #ffffff;
   &:hover,
