--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -12,16 +12,16 @@
     display: flex;
     flex-direction: column;
     margin-left: auto;
-    padding-top: 21px;
-    padding-bottom: 21px;
+    // padding-top: 21px;
+    // padding-bottom: 21px;
   }
 
   @media screen and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
     margin-left: auto;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    // padding-top: 32px;
+    // padding-bottom: 32px;
   }
 }
 .connect__link {
