--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -160,7 +160,7 @@
 }
 
 .footer-modal-input {
-  width: 450px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
