--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -67,7 +67,7 @@
 }
 
 .hero__title {
-  max-width: 400px;
+  max-width: 300px;
   display: inline-block;
   width: 696px;
   font-weight: 900;
@@ -78,6 +78,9 @@
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin-bottom: 30px;
+  @media screen and (min-width: 480px) {
+    max-width: 400px;
+  }
   @media screen and (min-width: 1200px) {
     max-width: 1600px;
     font-size: 44px;
@@ -91,7 +94,7 @@
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   font-weight: 700;
-  width: 200px;
+  width: 150px;
   height: 50px;
   font-size: 16px;
   line-height: 1.88;
@@ -108,5 +111,8 @@
   &:hover,
   &:focus {
     background-color: var(--accent-color);
+  }
+  @media screen and (min-width: 480px) {
+    width: 200px;
   }
 }
