--- a/sass/layout/_skils.scss
+++ b/sass/layout/_skils.scss
@@ -15,7 +15,7 @@
 }
 
 .skils__item {
-  width: 450px;
+  width: 100%;
   text-align: center;
 
   @media screen and (min-width: 768px) {
@@ -29,7 +29,7 @@
 
 .skils__icon {
   padding-top: 25px;
-  width: 450px;
+  width: 100%;
   height: 120px;
   border-radius: 4px;
   margin-bottom: 30px;
