--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,7 @@ img {
 }
 
 .backdrop {
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
@@ -106,8 +107,8 @@ img {
 }
 
 .modal {
-  width: 450px;
-  height: auto;
+  width: 100%;
+  height: 609px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -116,6 +117,12 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scaleY(1) rotate(0);
   transition: transform 300ms;
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 480px;
+    height: auto;
+  }
 }
 @media screen and (min-width: 768px) {
   .modal {
@@ -131,7 +138,7 @@ img {
 }
 
 .backdrop.is-hidden.modal {
-  transform: translate(-50%, -50%) scaleY(0) rotate(180 deg);
+  transform: translate(-50%, -50%) scaleY(0) rotate(180deg);
 }
 
 .modal-close-button {
@@ -970,8 +977,14 @@ img {
 }
 
 .clients__item {
-  width: 210px;
+  width: 100%;
   height: 92px;
+}
+@media screen and (min-width: 480px) {
+  .clients__item {
+    width: 210px;
+    height: 92px;
+  }
 }
 @media screen and (min-width: 768px) {
   .clients__item {
@@ -1361,7 +1374,7 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
   line-height: 30px;
-  width: 200px;
+  width: 150px;
   height: 50px;
   letter-spacing: 0.06em;
   padding-top: 10px;
@@ -1369,6 +1382,11 @@ img {
   padding-left: 22px;
   padding-right: 62px;
   margin-left: 16px;
+}
+@media screen and (min-width: 480px) {
+  .footer-modal-button {
+    width: 200px;
+  }
 }
 .footer-modal-button:hover, .footer-modal-button:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
