--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,5 +1,5 @@
 .backdrop {
-  // position: fixed;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
@@ -8,8 +8,8 @@
 }
 
 .modal {
-  width: 450px;
-  height: auto;
+  width: 100%;
+  height: 609px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -19,6 +19,10 @@
   left: 50%;
   transform: translate(-50%, -50%) scaleY(1) rotate(0);
   transition: transform 300ms;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    height: auto;
+  }
   @media screen and (min-width: 768px) {
     width: 450px;
     height: auto;
@@ -30,7 +34,7 @@
   }
 }
 .backdrop.is-hidden.modal {
-  transform: translate(-50%, -50%) scaleY(0) rotate(180 deg);
+  transform: translate(-50%, -50%) scaleY(0) rotate(180deg);
 }
 .modal-close-button {
   border: 1px solid rgba(0, 0, 0, 0.1);
