--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -20,8 +20,12 @@
 }
 
 .clients__item {
-  width: 210px;
+  width: 100%;
   height: 92px;
+  @media screen and (min-width: 480px) {
+    width: 210px;
+    height: 92px;
+  }
 
   @media screen and (min-width: 768px) {
     width: 226px;
