--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -189,7 +189,7 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: none;
   line-height: 30px;
-  width: 200px;
+  width: 150px;
   height: 50px;
   letter-spacing: 0.06em;
   padding-top: 10px;
@@ -197,6 +197,9 @@
   padding-left: 22px;
   padding-right: 62px;
   margin-left: 16px;
+  @media screen and (min-width: 480px) {
+    width: 200px;
+  }
 
   &:hover,
   &:focus {
