--- a/css/main.css
+++ b/css/main.css
@@ -1041,22 +1041,17 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .portfolio__button {
-    display: flex;
-    justify-content: center;
     padding-bottom: 50px;
     margin-bottom: 0;
   }
 }
 
 .list-portfolio {
+  width: 100%;
+  display: block;
   justify-content: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  width: 100%;
-}
-.list-portfolio:hover, .list-portfolio:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .list-portfolio {
@@ -1069,6 +1064,9 @@ img {
     width: calc((100% - 60px) / 3);
     margin-bottom: 0;
   }
+}
+.list-portfolio:hover, .list-portfolio:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .list-portfolio:hover .content-top-text {
@@ -1103,12 +1101,6 @@ img {
 }
 
 .portfolio__button-item {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  text-align: center;
-  padding-bottom: 15px;
   display: block;
   margin-right: 8px;
   align-items: center;
