--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -8,23 +8,16 @@
   }
 
   @media screen and (min-width: 1200px) {
-    display: flex;
-    justify-content: center;
     padding-bottom: 50px;
     margin-bottom: 0;
   }
 }
 .list-portfolio {
+  width: 100%;
+  display: block;
   justify-content: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  width: 100%;
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-    margin-bottom: 30px;
-  }
 
   @media screen and (min-width: 768px) {
     width: calc((100% - 30px) / 2);
@@ -33,6 +26,11 @@
   @media screen and (min-width: 1200px) {
     width: calc((100% - 60px) / 3);
     margin-bottom: 0;
+  }
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
 
@@ -48,6 +46,14 @@
   position: relative;
   overflow: hidden;
 }
+
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//
+//   }
+// }
 
 .content-top-text {
   position: absolute;
@@ -67,12 +73,12 @@
 }
 
 .portfolio__button-item {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  text-align: center;
-  padding-bottom: 15px;
+  // font-weight: 700;
+  // font-size: 16px;
+  // line-height: 1.87;
+  // letter-spacing: 0.06em;
+  // text-align: center;
+  // padding-bottom: 15px;
 
   display: block;
   margin-right: 8px;
